--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /.phpunit.cache
 /node_modules
 /public/build
+!/public/build/
+!public/build/manifest.json
+!public/build/app.js
+!public/build/app.css
 /public/hot
 /public/storage
 /storage/*.key
